fixed the map issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -471,9 +471,9 @@ body>.row {
 	}
 
 	#map>img {
-		/* -ms-transform: rotate(90deg);
-		-webkit-transform: rotate(90deg); */
-		/* transform: rotate(90deg); */
+		-ms-transform: rotate(90deg);
+		-webkit-transform: rotate(90deg); 
+		 transform: rotate(90deg);
 		width: 150%;
 		margin-top: 50%;
 		margin-left: -25%;
